# kiln

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  kiln.spec  pyproject.toml
.claude/agents/: kiln-codebase-analyzer.md  kiln-codebase-locator.md  kiln-codebase-pattern-finder.md  kiln-pr-review.md  kiln-thoughts-analyzer.md  kiln-thoughts-locator.md  kiln-web-search-researcher.md
.claude/commands/: create_plan_github.md  implement_github.md  kiln-create_plan_github.md  kiln-create_plan_simple.md  kiln-fix_ci_failures.md  kiln-implement_github.md  kiln-prepare_implementation_github.md  kiln-research_codebase_github.md  prepare_implementation_github.md
.claude/skills/kiln-create-worktree-from-issues/: SKILL.md
.claude/skills/kiln-edit-github-issue-components/: SKILL.md
.claude/skills/kiln-process-issue-phase/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: mutation.yml  release.yml  slack-release-notify.yml  test.yml  vulture-check.yml
docs/: user-guide.md
docs/workflows/: proactive-checks.yml  slack-release-notify.yml  vulture-check.yml
scripts/: check_config_sync.py  check_orphan_modules.py
src/: child_issue_checker.py  claude_runner.py  cli.py  comment_processor.py  config.py  daemon.py  daemon_utils.py  database.py  frontmatter.py  hello_ddd.py  hibernation.py  labels.py  logger.py  mcp_client.py  mcp_config.py  reset_handler.py  slack.py  state_manager.py  workflow_orchestrator.py  workspace.py  yolo_controller.py
src/integrations/: __init__.py  auto_merging.py  azure_oauth.py  mcp_client.py  mcp_config.py  pagerduty.py  pr_validation.py  repo_credentials.py  slack.py  telemetry.py
src/interfaces/: __init__.py  ticket.py
src/security/: authorization.py
src/setup/: checks.py  project.py
src/ticket_clients/: __init__.py  base.py  github.py  github_enterprise_3_14.py  github_enterprise_3_15.py  github_enterprise_3_17.py  github_enterprise_3_18.py
src/utils/: __init__.py  gh.py
src/workflows/: __init__.py  base.py  implement.py  plan.py  prepare.py  research.py
tests/: conftest.py  test_auto_merging_config.py  test_azure_oauth.py  test_child_issue_checker.py  test_claude_runner.py  test_cli.py  test_comment_processor.py  test_config.py  test_daemon_archive_lazy_load.py  test_daemon_blocked_by.py  test_daemon_credentials_integration.py  test_daemon_frontmatter.py  test_daemon_hibernation.py  test_daemon_label_init.py  test_daemon_mcp_integration.py  test_daemon_process_tracking.py  test_database.py  test_frontmatter.py  test_github_client.py  test_github_enterprise_3_15.py  test_hello_ddd.py  test_integration.py  test_integration_daemon_comments.py  test_integration_daemon_core.py  test_integration_daemon_reset.py  test_integration_daemon_yolo.py  test_integration_workspace.py  test_logger.py  test_mcp_client.py  test_mcp_config.py  test_mcp_validation.py  test_merge_queue_daemon.py  test_merge_queue_db.py  test_merge_queue_integration.py  test_pagerduty.py  test_pr_validation.py  test_properties.py  test_protocol_conformance.py  test_repo_credentials.py  test_run_logging.py  (+5 more)
tests/test_github_client/: test_actor_detection.py  test_auth.py  test_comments.py  test_enterprise.py  test_merge_queue.py  test_prs.py
tests/test_utils/: test_gh.py
